@@ -1,58 +1,42 @@
 import com.mojang.serialization.MapCodec;
-import com.mojang.serialization.codecs.RecordCodecBuilder;
+import java.util.Collections;
 import java.util.List;
 
-public class eon extends eot {
-   public static final MapCodec<eon> a = RecordCodecBuilder.mapCodec(
-      $$0 -> $$0.group(emp.b.fieldOf("feature").forGetter($$0x -> $$0x.b), e()).apply($$0, eon::new)
-   );
-   private final jr<emp> b;
-   private final tq c;
+public class eon extends eou {
+   public static final MapCodec<eon> a = MapCodec.unit(() -> eon.b);
+   public static final eon b = new eon();
 
-   protected eon(jr<emp> $$0, eov.a $$1) {
-      super($$1);
-      this.b = $$0;
-      this.c = this.b();
-   }
-
-   private tq b() {
-      tq $$0 = new tq();
-      $$0.a("name", "minecraft:bottom");
-      $$0.a("final_state", "minecraft:air");
-      $$0.a("pool", "minecraft:empty");
-      $$0.a("target", "minecraft:empty");
-      $$0.a("joint", dvb.a.a.c());
-      return $$0;
+   private eon() {
+      super(eow.a.a);
    }
 
    @Override
-   public km a(ero $$0, dqd $$1) {
+   public km a(erp $$0, dqe $$1) {
       return km.h;
    }
 
    @Override
-   public List<ern.a> a(ero $$0, ji $$1, dqd $$2, azh $$3) {
-      return List.of(ern.a.a(new ern.d($$1, djn.pD.m().b(dnp.b, jp.a(jn.a, jn.d)), this.c)));
+   public List<ero.a> a(erp $$0, ji $$1, dqe $$2, azh $$3) {
+      return Collections.emptyList();
    }
 
    @Override
-   public end a(ero $$0, ji $$1, dqd $$2) {
-      km $$3 = this.a($$0, $$2);
-      return new end($$1.u(), $$1.v(), $$1.w(), $$1.u() + $$3.u(), $$1.v() + $$3.v(), $$1.w() + $$3.w());
+   public ene a(erp $$0, ji $$1, dqe $$2) {
+      throw new IllegalStateException("Invalid call to EmtyPoolElement.getBoundingBox, filter me!");
    }
 
    @Override
-   public boolean a(ero $$0, dhf $$1, dhd $$2, dys $$3, ji $$4, ji $$5, dqd $$6, end $$7, azh $$8, eqx $$9, boolean $$10) {
-      return this.b.a().a($$1, $$3, $$8, $$4);
+   public boolean a(erp $$0, dhg $$1, dhe $$2, dyt $$3, ji $$4, ji $$5, dqe $$6, ene $$7, azh $$8, eqy $$9, boolean $$10) {
+      return true;
    }
 
    @Override
-   public eou<?> a() {
-      return eou.c;
+   public eov<?> a() {
+      return eov.d;
    }
 
    @Override
    public String toString() {
-      return "Feature[" + this.b + "]";
+      return "Empty";
    }
 }
