@@ -1,125 +1,95 @@
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Sets;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import java.util.List;
 import java.util.Set;
 
-public class eww extends exd {
-   public static final axf<enl> a = axb.l;
-   public static final jr<eun> b = euo.i;
-   public static final byte c = 2;
-   public static final int d = 50;
-   public static final boolean e = true;
-   public static final MapCodec<eww> f = RecordCodecBuilder.mapCodec(
+public class eww extends exe {
+   public static final int a = 0;
+   public static final MapCodec<eww> b = RecordCodecBuilder.mapCodec(
       $$0 -> a($$0)
             .and(
                $$0.group(
-                  axf.a(mc.aU).optionalFieldOf("destination", a).forGetter($$0x -> $$0x.h),
-                  eun.b.optionalFieldOf("decoration", b).forGetter($$0x -> $$0x.i),
-                  Codec.BYTE.optionalFieldOf("zoom", (byte)2).forGetter($$0x -> $$0x.j),
-                  Codec.INT.optionalFieldOf("search_radius", 50).forGetter($$0x -> $$0x.k),
-                  Codec.BOOL.optionalFieldOf("skip_existing_chunks", true).forGetter($$0x -> $$0x.l)
+                  dcz.c.fieldOf("enchantment").forGetter($$0x -> $$0x.c),
+                  ezx.a.fieldOf("count").forGetter($$0x -> $$0x.d),
+                  Codec.INT.optionalFieldOf("limit", 0).forGetter($$0x -> $$0x.e)
                )
             )
             .apply($$0, eww::new)
    );
-   private final axf<enl> h;
-   private final jr<eun> i;
-   private final byte j;
-   private final int k;
-   private final boolean l;
+   private final jr<dcz> c;
+   private final ezw d;
+   private final int e;
 
-   eww(List<eyz> $$0, axf<enl> $$1, jr<eun> $$2, byte $$3, int $$4, boolean $$5) {
+   eww(List<eza> $$0, jr<dcz> $$1, ezw $$2, int $$3) {
       super($$0);
-      this.h = $$1;
-      this.i = $$2;
-      this.j = $$3;
-      this.k = $$4;
-      this.l = $$5;
+      this.c = $$1;
+      this.d = $$2;
+      this.e = $$3;
    }
 
    @Override
-   public exf<eww> b() {
-      return exg.q;
+   public exg<eww> b() {
+      return exh.m;
    }
 
    @Override
    public Set<bai<?>> a() {
-      return Set.of(eyk.f);
+      return Sets.union(ImmutableSet.of(eyl.d), this.d.a());
+   }
+
+   private boolean c() {
+      return this.e > 0;
    }
 
    @Override
-   public cwo a(cwo $$0, evq $$1) {
-      if (!$$0.a(cws.vi)) {
-         return $$0;
-      } else {
-         faz $$2 = $$1.c(eyk.f);
-         if ($$2 != null) {
-            ard $$3 = $$1.d();
-            ji $$4 = $$3.a(this.h, ji.a((kb)$$2), this.k, this.l);
-            if ($$4 != null) {
-               cwo $$5 = cxb.a($$3, $$4.u(), $$4.w(), this.j, true, true);
-               cxb.a($$3, $$5);
-               eus.a($$5, $$4, "+", this.i);
-               return $$5;
-            }
+   public cwp a(cwp $$0, evr $$1) {
+      bul $$2 = $$1.c(eyl.d);
+      if ($$2 instanceof bvh $$3) {
+         int $$4 = ddb.a(this.c, $$3);
+         if ($$4 == 0) {
+            return $$0;
          }
 
-         return $$0;
+         float $$5 = (float)$$4 * this.d.b($$1);
+         $$0.g(Math.round($$5));
+         if (this.c()) {
+            $$0.f(this.e);
+         }
       }
+
+      return $$0;
    }
 
-   public static eww.a c() {
-      return new eww.a();
+   public static eww.a a(jt.a $$0, ezw $$1) {
+      jt.b<dcz> $$2 = $$0.d(mc.aO);
+      return new eww.a($$2.b(dde.s), $$1);
    }
 
-   public static class a extends exd.a<eww.a> {
-      private axf<enl> a;
-      private jr<eun> b;
-      private byte c;
-      private int d;
-      private boolean e;
+   public static class a extends exe.a<eww.a> {
+      private final jr<dcz> a;
+      private final ezw b;
+      private int c = 0;
 
-      public a() {
-         this.a = eww.a;
-         this.b = eww.b;
-         this.c = 2;
-         this.d = 50;
-         this.e = true;
+      public a(jr<dcz> $$0, ezw $$1) {
+         this.a = $$0;
+         this.b = $$1;
       }
 
       protected eww.a a() {
          return this;
       }
 
-      public eww.a a(axf<enl> $$0) {
-         this.a = $$0;
-         return this;
-      }
-
-      public eww.a a(jr<eun> $$0) {
-         this.b = $$0;
-         return this;
-      }
-
-      public eww.a a(byte $$0) {
+      public eww.a a(int $$0) {
          this.c = $$0;
          return this;
       }
 
-      public eww.a a(int $$0) {
-         this.d = $$0;
-         return this;
-      }
-
-      public eww.a a(boolean $$0) {
-         this.e = $$0;
-         return this;
-      }
-
       @Override
-      public exe b() {
-         return new eww(this.g(), this.a, this.b, this.c, this.d, this.e);
+      public exf b() {
+         return new eww(this.g(), this.a, this.b, this.c);
       }
    }
 }
